--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,17 @@
 
 <body>
 <h1>Hola</h1>
+<div class="fixed-action-btn horizontal">
+    <a class="btn-floating btn-large red">
+      <i class="large material-icons">mode_edit</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">message</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">photo_library</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">date_range</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">video_library</i></a></li>
+    </ul>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
