--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
@@ -11,23 +10,172 @@
   <link rel="stylesheet" href="css/main.css">
   <title>Flash Bitácora</title>
 </head>
-
 <body>
-<h1>Hola</h1>
-<div class="fixed-action-btn horizontal">
+  <div class="container">
+    <div class="row">
+      <div class="col l12 s12 center-align">
+        <h1>Flash Bitácora</h1>
+        <p>"Publish anything", just in you browser</p>
+      </div>
+    </div>
+  </div>
+  <div class="container containerPublish">
+  </div>
+  <div class="fixed-action-btn horizontal">
     <a class="btn-floating btn-large red">
       <i class="large material-icons">mode_edit</i>
     </a>
     <ul>
-      <li><a class="btn-floating red"><i class="material-icons">message</i></a></li>
-      <li><a class="btn-floating yellow darken-1"><i class="material-icons">photo_library</i></a></li>
-      <li><a class="btn-floating green"><i class="material-icons">date_range</i></a></li>
-      <li><a class="btn-floating blue"><i class="material-icons">video_library</i></a></li>
+      <li>
+        <a class="btn-floating red modal-trigger" href="#modal1">
+          <i class="material-icons">message</i>
+        </a>
+      </li>
+      <li>
+        <a class="btn-floating yellow darken-1 modal-trigger" href="#modal2">
+          <i class="material-icons">photo_library</i>
+        </a>
+      </li>
+      <li>
+        <a class="btn-floating green modal-trigger" href="#modal3">
+          <i class="material-icons">date_range</i>
+        </a>
+      </li>
+      <li>
+        <a class="btn-floating blue modal-trigger" href="#modal4">
+          <i class="material-icons">video_library</i>
+        </a>
+      </li>
     </ul>
   </div>
-
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s12">
+              <input placeholder="Título" id="title" type="text" class="validate" data-length="10">
+              <label for="title"></label>
+            </div>
+          </div>
+          <div class="row">
+            <form>
+              <div class="row">
+                <div class="input-field col s12">
+                  <textarea id="message" class="materialize-textarea"></textarea>
+                  <label for="message">Mensaje</label>
+                </div>
+              </div>
+            </form>
+          </div>
+        </form>
+        <div class="modal-footer">
+          <a href="#!" id="publicarMessage" class="modal-action modal-close waves-effect waves-light btn">
+            <i class="material-icons right">send</i>Publicar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="modal2" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <form class="col s12">
+          <div class="row">
+            <div class="input-field col s12">
+              <input placeholder="Título de la imagen" id="titleImage" type="text" class="validate">
+              <label for="titleImage"></label>
+            </div>
+          </div>
+          <div class="row">
+            <form action="#">
+              <div class="file-field input-field">
+                <div class="btn">
+                  <span>Imagen</span>
+                  <input type="file" id="files" name="files[]" multiple accept="image/x-png,image/gif,image/jpeg" />
+                </div>
+                <div class="file-path-wrapper">
+                  <input class="file-path validate" type="text">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col l2 s1">
+                  <output id="list"></output>
+                </div>
+              </div>
+            </form>
+          </div>
+        </form>
+        <div class="modal-footer">
+          <a href="#!" id="publishImage" class="modal-action modal-close waves-effect waves-light btn">
+            <i class="material-icons right">send</i>Publicar</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="modal3" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <form class="">
+          <div class="row">
+            <div class="input-field col s12">
+              <input placeholder="Título de tu evento" id="titleEvent" type="text" class="validate" data-length="10">
+              <label for="titleEvent"></label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <input id="date" type="text" class="datepicker">
+              <label for="date">¿En qué fecha se realizo el evento?</label>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <div class "row">
+          <div class="col s10">
+            <a href="#!" id="publicarEvent" class="modal-action modal-close waves-effect waves-light btn">
+              <i class="material-icons right">send</i>Publicar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="modal4" class="modal">
+    <div class="modal-content">
+      <div class="row">
+        <form class="">
+          <div class="row">
+            <div class="input-field col s12">
+              <input placeholder="¿Cual es el titulo de tu video?" id="titleMultimedia" type="text" class="validate" data-length="10">
+              <label for="titleMultimedia"></label>
+            </div>
+          </div>
+          <div class="file-field input-field">
+            <div class="btn">
+              <span>Video o Audio</span>
+              <input id="fileMultimedia" type="file" accept="audio/*,video/*">
+            </div>
+            <div class="file-path-wrapper">
+              <input class="file-path validate" type="text">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <div class "row">
+          <div class="col s10">
+            <a href="#!" id="publishMultimedia" class="modal-action modal-close waves-effect waves-light btn">
+              <i class="material-icons right">send</i>Publicar</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+  <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVwz3mdh_9SgBU0vA6qFqD9eiVnhroNYE&callback=initMap">
+  </script>-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="js/app.js"></script>
 </body>
-
 </html>
